feat(inventory-balance): unavailable stock
