# inventory-service/internal/server/gapi/rpc_create_product.go
@@ -11,21 +11,20 @@ import (
 func (r *Server) CreateProduct(ctx context.Context, req *pb.CreateProductRequest) (*pb.ProductResponse, error) {
 	product, err := r.productUseCase.Create(ctx, presentation.CreateProductRequest{
 		Code:  req.Code,
-		Total: int32(req.Total),
+		Total: req.Total,
 	})
 	if err != nil {
 		return nil, translationError(err)
 	}
 
-	res := pb.ProductResponse{
+	res := &pb.ProductResponse{
 		Product: &pb.Product{
 			Code:      product.Code,
 			Total:     product.Total,
 			Reserved:  product.Reserved,
-			Available: product.Available,
 			UpdatedAt: timestamppb.New(product.UpdatedAt),
 			CreatedAt: timestamppb.New(product.CreatedAt),
 		},
 	}
-	return &res, nil
+	return res, nil
 }
