# inventory-service/internal/server/gapi/rpc_delete_product.go
@@ -5,18 +5,12 @@ import (
 
 	"github.com/ymanshur/synasishouse/inventory/internal/presentation"
 	"github.com/ymanshur/synasishouse/pb"
+	"google.golang.org/protobuf/types/known/emptypb"
 )
 
-func (r *Server) DeleteProduct(ctx context.Context, req *pb.DeleteProductRequest) (*pb.DeleteProductResponse, error) {
+func (r *Server) DeleteProduct(ctx context.Context, req *pb.GetProductRequest) (*emptypb.Empty, error) {
 	err := r.productUseCase.Delete(ctx, presentation.GetProductRequest{
 		ID: req.GetId(),
 	})
-	if err != nil {
-		return nil, translationError(err)
-	}
-
-	res := pb.DeleteProductResponse{
-		IsSuccess: true,
-	}
-	return &res, nil
+	return nil, translationError(err)
 }
