# inventory-service/internal/server/gapi/rpc_update_product.go
@@ -17,15 +17,14 @@ func (r *Server) UpdateProduct(ctx context.Context, req *pb.CreateProductRequest
 		return nil, translationError(err)
 	}
 
-	res := pb.ProductResponse{
+	res := &pb.ProductResponse{
 		Product: &pb.Product{
 			Code:      product.Code,
 			Total:     product.Total,
 			Reserved:  product.Reserved,
-			Available: product.Available,
 			UpdatedAt: timestamppb.New(product.UpdatedAt),
 			CreatedAt: timestamppb.New(product.CreatedAt),
 		},
 	}
-	return &res, nil
+	return res, nil
 }
